# opencv

./: next_steps.md
ml_object_detector/: CMakeLists.txt  ml_object_detector.cc
object_over_background/: CMakeLists.txt  canny.cc  object_over_background.cc
tests/: builder.sh
tests 2/: execute.sh
tests 2/contours/: contours.cc
tests 2/filters/: CMakeLists.txt
tests 2/image_scan/: CMakeLists.txt  image_scan.cc
tests 2/load_display_img/: img_loader.cc
tests 2/load_img/: CMakeLists.txt
tests 2/mat_manual_management/: CMakeLists.txt  mat_manual_management.cc
tests 2/moments/: CMakeLists.txt
tests 2/region_of_interest/: CMakeLists.txt
tests 2/shapes/: CMakeLists.txt
tests/RedEyeRemover/: Makefile  removeRedEyes
tests/camera_video_capture/: CMakeLists.txt
tests/canny/: CMakeCache.txt  CMakeLists.txt  Makefile  canny  canny.cc  cmake_install.cmake
tests/contour/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  Makefile  cmake_install.cmake  contour  contour.cc
tests/contours/: CMakeLists.txt
tests/filters/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filters  filters.cc
tests/hough_lines_p/: CMakeLists.txt  hough_lines_p.cc
tests/image_scan/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image_scan  image_scan.cc
tests/img_to_grayscale/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  img_to_grayscale  img_to_grayscale.cc
tests/line_detector/: CMakeLists.txt  line_detector.cc
tests/load_display_img/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  Makefile  cmake_install.cmake  img_loader  img_loader.cc
tests/load_img/: Makefile  img_loader  img_loader.cc
tests/load_imgCMAKE/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  load_imgCMAKE
tests/mat_manual_management/: CMakeCache.txt  Makefile  cmake_install.cmake  mat_manual_management  mat_manual_management.cc
tests/moments/: CMakeCache.txt  Makefile  cmake_install.cmake  moments  moments.cc
tests/region_of_interest/: CMakeCache.txt  Makefile  cmake_install.cmake  region_of_interest  region_of_interest.cc
tests/removeRedEyes/: CMakeLists.txt  removeRedEyes.cc
tests/shapes/: CMakeCache.txt  Makefile  cmake_install.cmake
tests_img/: Thumbs.db
