cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
project( mat_manual_management )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( mat_manual_management mat_manual_management.cc )
target_link_libraries( mat_manual_management ${OpenCV_LIBS} )